@@ -6,7 +6,7 @@ import com.sun.booking.auth.dto.UserDTO;
 
 public class Utils {
   public static boolean stringIsEmpty(String str) {
-    return str == null || str.trim().isEmpty();
+    return str == null || str.trim().isEmpty() || str.isBlank();
   }
 
   public static UserDTO getCurrentUser(Authentication authentication) {
